Basic syntax highlighting for text diffs

--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -36,6 +36,8 @@
     <script type="text/javascript" src="/js/anims.js?v=1658923290"></script>
     <script type="text/javascript" src="/js/bufo.js"></script>
     <script type="text/javascript" src="/js/js-blp.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" />
     <link rel='stylesheet' type='text/css' href='/css/diff2html.min.css' />
     <script src='https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html-ui.min.js'></script>
