--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -340,7 +340,7 @@
 
             var build = searchHash.substr(searchHash.indexOf('build=')).split('&')[0].split('=')[1];
 
-            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "bls", "lua", "txt", "srt", "toc"];
+            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "bls", "lua", "txt", "srt", "toc", "hlsl"];
 
             var table = $('#files').DataTable({
                 "processing": true,
