--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -244,6 +244,8 @@
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Kobold/11KO_Kobold_')">11 Kobold</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Kobyss/11KB_Kobyss_')">11 Kobyss</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Goblin/11GO_Goblin_')">11 Goblin</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Ethereal/11ET_Ethereal_')">11 Ethereal</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Broker/11BO_Brokers_')">11 Brokers</button> <br />
                                     </div>
                                 </div>
                             </div>
@@ -362,7 +364,7 @@
 
         (function () {
             var page = 0;
-            var searchString = "type:m2,isplaceholder";
+            var searchString = "type:m2,isplaceholder,added:11.1.7.61491|11.2.0.61476";
             var sortCol = 0;
             var sortDesc = "asc";
 
