--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -111,19 +111,22 @@
                 </div>
                 <div class="modal-body" id="helpModalContent">
                     <!--<kbd>%</kbd> for wildcard<br>
-                    <kbd>^</kbd> string must start with<br>-->
+    <kbd>^</kbd> string must start with<br>-->
                     <kbd>type:type</kbd> for filtering by type (requires files to be analyzed to include unknown files)<br>
-                    <!--<kbd>chash:md5</kbd> for filter by contenthash<br>-->
+                    <kbd>chash:md5</kbd> for filter by contenthash (currently loaded build only)<br>
                     <kbd>unnamed</kbd> for files without filenames<br>
                     <kbd>haslookup</kbd> for files with filename hashes/lookups<br />
-                    <!--<kbd>communitynames</kbd> for files with community filenames<br>-->
                     <kbd>encrypted</kbd> for encrypted files<br>
                     <kbd>encrypted:KEY</kbd> for encrypted by key<br>
                     <kbd>knownkey</kbd> for files encrypted with known keys<br>
                     <kbd>unknownkey</kbd> for files encrypted with unknown keys<br>
-                    <!--<kbd>skit:soundkitid</kbd> for searching by SoundKitID<br>-->
+                    <kbd>skit:soundkitid</kbd> for searching by SoundKitID<br>
                     <kbd>range:start-end</kbd> search within a specific set of FileDataIDs<br>
                     <!--<kbd>vo:searchterm</kbd> show sound files in which this dialogue appears<br>-->
+                    <kbd>isplaceholder</kbd> for files with placeholder filenames<br />
+                    <kbd>addedin:x.x.x.xxxxx|x.x.x.xxxxx</kbd> filter by files added between the given builds (requires both builds to have been loaded once so manifest exists)<br />
+                    <kbd>in:x.x.x.xxxxx</kbd> filter by files present in a given build (requires build to have been loaded once so manifest exists)<br />
+                    <br />
                     <p>It is also possible to combine some of these options (but not others, it will complain) by separating them by a <kbd>,</kbd>. <br>Examples: <kbd>unnamed,type:wmo</kbd> <kbd>creature,type:m2</kbd></p>
                 </div>
                 <div class="modal-footer">
