Add search to creatures page

--- a/wwwroot/db/creatures.html
+++ b/wwwroot/db/creatures.html
@@ -78,7 +78,7 @@
                 "autoWidth": false,
                 "orderMulti": false,
                 "ordering": false,
-                "searching": false,
+                "searching": true,
                 "order": [[sortCol, sortDesc]]
             });
 
