--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -114,6 +114,7 @@
                                 <tr><td>Color grading</td><td>Environment color grading textures.</td></tr>
                                 <tr><td>CreatureDisplayInfo textures</td><td>Creature model skins referenced by CreatureDisplayInfo.</td></tr>
                                 <tr><td>DBFilesClient</td><td>Names DB2 files based on the manifest.json file from the WoWDBDefs repo.</td></tr>
+                                <tr><td>Decals</td><td>Textures related to decals.</td></tr>
                                 <tr><td>Emote sounds</td><td>Character emote sounds.</td></tr>
                                 <tr><td>Full screen effects</td><td>Full screen effect textures.</td></tr>
                                 <tr><td>GameObject DisplayInfo</td><td>Doodad sound naming based on GameObjectDisplayInfo.db2.</td></tr>
@@ -148,6 +149,7 @@
                                 <option value="ColorGrading" selected>Color grading</option>
                                 <option value="CDI" selected>CreatureDisplayInfo textures</option>
                                 <option value="DB2" selected>DBFilesClient</option>
+                                <option value="Decals" selected>Decals</option>
                                 <option value="Emotes" selected>Emote sounds</option>
                                 <option value="FSE" selected>Full screen effects</option>
                                 <option value="GDI" selected>GameObject DisplayInfo</option>
