--- a/wwwroot/header.html
+++ b/wwwroot/header.html
@@ -49,6 +49,9 @@
         </ul>
     </div>
     <div>
+        <a href="/settings.html" class="btn btn-secondary align-items-center" aria-pressed="false">
+            <i class='fa fa-gear'></i> Settings
+        </a>
         <button type="button" onclick="themeClick('light')" class="btn align-items-center" data-bs-theme-value="light" aria-pressed="false">
             Light
         </button>
