Fix no default locale

--- a/wwwroot/dbc/index.html
+++ b/wwwroot/dbc/index.html
@@ -1157,7 +1157,7 @@
             }
 
              if (vars["locale"] == null) {
-                 currentParams["locale"] = "";
+                 currentParams["locale"] = "enUS";
              } else {
                  currentParams["locale"] = vars["locale"];
              }
