ADT JSON previews

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -343,7 +343,7 @@
 
             var build = searchHash.substr(searchHash.indexOf('build=')).split('&')[0].split('=')[1];
 
-            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "bls", "gfat", "lua", "txt", "srt", "toc", "hlsl", "m3"];
+            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "bls", "gfat", "lua", "txt", "srt", "toc", "hlsl", "m3", "adt"];
 
             var table = $('#files').DataTable({
                 "processing": true,
