Add 12PH racial zones

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -254,6 +254,8 @@
                                     <div class="col-md-4">
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/12XP_')">12 Generic</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/PlayerHousing/12PH_')">12 Housing</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Elwynn/12ELW_Elwynn_')">12 Elwynn</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Durotar/12DUR_Durotar_')">12 Durotar</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/BloodElf/12BE_BloodElf_')">12 BloodElf</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Troll/12TR_Troll_')">12 Troll</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Void/12VD_Void_')">12 Void</button> <br />
